// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render table 1`] = `
<table
  class="tokenTable-0-0-1"
>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Value
      </th>
      <th>
        Preview
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        borderRadius
      </td>
      <td>
        8
      </td>
      <td />
    </tr>
    <tr>
      <td>
        color
      </td>
      <td>
        #ffffff
      </td>
      <td>
        <div
          class="preview color"
          style="background-color: #ffffff"
        />
      </td>
    </tr>
    <tr>
      <td>
        opacity
      </td>
      <td>
        1
      </td>
      <td>
        <div
          class="preview opacity-wrapper"
        >
          <span
            class="opacity"
            style="opacity: 1"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table should update table on store changes 1`] = `
<table
  class="tokenTable-0-0-1"
>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Value
      </th>
      <th>
        Preview
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        color
      </td>
      <td>
        #ffffff
      </td>
      <td>
        <div
          class="preview color"
          style="background-color: #ffffff"
        />
      </td>
    </tr>
  </tbody>
</table>
`;
